fixed albums shrinking on closing as well as fixed non-square covers stretching in the info box

--- a/app/assets/stylesheets/albums.scss
+++ b/app/assets/stylesheets/albums.scss
@@ -480,9 +480,6 @@ body {
 				justify-content: space-between;
 				align-items: center;
 				flex-grow: 1;
-				.expandable-img {
-					height: 300px;
-				}
 				.expandable-img:hover {
 					cursor: pointer;
 				}
